# blocks

./: .gitignore  README.md  blocks.py  pyproject.toml
blocks/: __init__.py
